fix wrap

--- a/style.css
+++ b/style.css
@@ -6,7 +6,6 @@
 .Herocont {
     display: flex;
     flex-direction: column;
-    align-items: center;
     gap: 40px;
 }
 #Hero {
@@ -25,8 +24,6 @@
 .init {
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
-    align-items: center;
     width: 960px;
     height: 96px;
     gap: 12px;
@@ -51,8 +48,6 @@
     height: 60px;
 }
 .btn >button {
-    justify-content: center;
-    align-items: center;
     padding: 12px 20px;
     font-weight: 500;
     font-size: 16px;
@@ -71,7 +66,6 @@
 .fillcont {
     display: flex;
     flex-direction: row;
-    justify-content: center;
     gap: 16px;
 }
 .fill {
@@ -125,26 +119,30 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    align-items: center;
     gap: 32px;
 }
 #subcards {
     display: flex;
     flex-direction: column;
+    flex-wrap: wrap;
+    align-items: center;
     gap: 32px;
 }
-#card2 {
+.card1 {
     display: flex;
-    flex-direction: row;
-    /* flex-wrap: wrap; */
+    flex-direction:row;
+    flex-wrap: wrap;
     gap: 24px;
-    align-items: center;
-    width: 592px;
-    height: 200px;
+    
 }
 .cardp {
     padding-top: 12px;
     gap: 8px;
+}
+.db {
+    display: flex;
+    flex-direction: column;
+    max-width: 248px;
 }
 .cardp >h3 {
     font-weight: 600;
@@ -173,19 +171,17 @@
 }
 
 .subbuttons >p {
-    background-color: aqua;
     border-radius: 16px;
-    align-items: center;
     padding: 2px 10px;
     font-size: 14px;
     font-weight: 500;
 }
 .subimg {
-    width: 320px;
-    height: 200px;
+    /* width: 320px;
+    height: 200px; */
 }
 
-.card1 {
+.card {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -197,7 +193,8 @@
     gap: 24px;
     padding: 0px;
 }
-.card1 >img {
+.card >img {
+    /* flex-wrap: wrap; */
     width: 592px;
     height: 228px;
 }
